[gd_scene load_steps=7 format=3 uid="uid://npotqslh2o0n"]

[ext_resource type="Script" path="res://Scenes/Projectiles/projectile.gd" id="1_5u5qa"]
[ext_resource type="Texture2D" uid="uid://dw18difl7jai4" path="res://Art/SlashFX 01.png" id="2_7almr"]
[ext_resource type="PackedScene" uid="uid://b1tcs6p6wvf60" path="res://Scenes/Components/movement_component.tscn" id="2_72biu"]
[ext_resource type="PackedScene" uid="uid://b4tnhb04raqnr" path="res://Scenes/Components/health_component.tscn" id="3_d2irl"]
[ext_resource type="PackedScene" uid="uid://btox05dq1do6o" path="res://Scenes/Components/hitbox_component.tscn" id="4_2u37y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5uh1t"]
size = Vector2(23, 30)

[node name="Projectile" type="Node2D"]
script = ExtResource("1_5u5qa")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_7almr")

[node name="MovementComponent" parent="." node_paths=PackedStringArray("moveable") instance=ExtResource("2_72biu")]
moveable = NodePath("..")

[node name="HealthComponent" parent="." instance=ExtResource("3_d2irl")]
max_health = 10.0
health = 10.0

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_2u37y")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(3.5, 2)
shape = SubResource("RectangleShape2D_5uh1t")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[connection signal="area_entered" from="HitboxComponent" to="HitboxComponent" method="_on_area_entered"]
